--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+*
+{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +17,19 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+::-webkit-scrollbar
+{
+    width: 0.4rem;
+}
+
+::-webkit-scrollbar-track
+{
+    background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb
+{
+    background-color: #0abde3;
 }
